Search result popups now clickable

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         var heatmap = new pelagios.Heatmap(map, testData.data);
         
-        new pelagios.Searchbox(document.getElementById('search'), map);
+        new pelagios.Searchbox(document.getElementById('search'), heatmap);
       });
     </script>
   </head>
