--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script type="text/javascript" src="pelagios-heatmap.js" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
       $(function() {
-        var baseLayer = L.tileLayer('http://pelagios.dme.ait.ac.at/tilesets/imperium//{z}/{x}/{y}.png', {
+        var baseLayer = L.tileLayer('http://server1.ahlfeldt.se/tiles/{z}/{x}/{y}.png', {
+        // var baseLayer = L.tileLayer('http://pelagios.dme.ait.ac.at/tilesets/imperium//{z}/{x}/{y}.png', {
           attribution: 'Tiles: <a href="http://pelagios.dme.ait.ac.at/maps/greco-roman/about.html">Pelagios</a>, 2012; Data: NASA, OSM, Pleiades, DARMC',
         });
  
