Updated DARE attribution

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       $(function() {
         // var baseLayer = L.tileLayer('http://server1.ahlfeldt.se/tiles/{z}/{x}/{y}.png', {
         var baseLayer = L.tileLayer('http://pelagios.dme.ait.ac.at/tilesets/imperium//{z}/{x}/{y}.png', {
-          attribution: 'Tiles: <a href="http://pelagios.dme.ait.ac.at/maps/greco-roman/about.html">Pelagios</a>, 2012; Data: NASA, OSM, Pleiades, DARMC',
+          attribution: 'Tiles: <a href="http://imperium.ahlfeldt.se/">DARE 2014</a>'
         });
  
         var map = new L.Map('map', {
