--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
     <script type="text/javascript" src="pelagios-heatmap.js" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
       $(function() {
-        // var baseLayer = L.tileLayer('http://server1.ahlfeldt.se/tiles/{z}/{x}/{y}.png', {
-        var baseLayer = L.tileLayer('http://pelagios.dme.ait.ac.at/tilesets/imperium//{z}/{x}/{y}.png', {
-          attribution: 'Tiles: <a href="http://imperium.ahlfeldt.se/">DARE 2014</a>'
-        });
+        var dareLayer = L.tileLayer('http://pelagios.dme.ait.ac.at/tilesets/imperium//{z}/{x}/{y}.png', {
+              attribution: 'Tiles: <a href="http://imperium.ahlfeldt.se/">DARE 2014</a>'
+            }),
+            
+            awmcLayer = L.tileLayer('http://a.tiles.mapbox.com/v3/isawnyu.map-knmctlkh/{z}/{x}/{y}.png', {
+              attribution: 'Tiles &copy; <a href="http://mapbox.com/" target="_blank">MapBox</a> | ' +
+                'Data &copy; <a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors, CC-BY-SA | '+
+                'Tiles and Data &copy; 2013 <a href="http://www.awmc.unc.edu" target="_blank">AWMC</a> ' +
+                '<a href="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US" target="_blank">CC-BY-NC 3.0</a>'
+            });
  
         var map = new L.Map('map', {
           center: new L.LatLng(41.893588, 12.488022),
           zoom: 5,
-          layers: [baseLayer],
+          layers: [awmcLayer],
           minZoom: 5,
           maxZoom: 11
         });
